--- a/rebar.config
+++ b/rebar.config
@@ -1,24 +1,23 @@
-{erl_opts, [debug_info, warn_export_all, warn_unused_import]}.
-
-{deps, [
-	{gun, {git, "https://github.com/ninenines/gun", {ref, "8efcedd3a089e6ab5317e4310fed424a4ee130f8"}}},
-    {gun, "0.10.0"}
+{erl_opts, [
+    debug_info,
+    warn_unused_vars,
+    warn_export_all,
+    warn_shadow_vars,
+    warn_unused_import,
+    warn_unused_function,
+    warn_bif_clash,
+    warn_unused_record,
+    warn_deprecated_function,
+    warn_obsolete_guard,
+    strict_validation,
+    warn_export_vars,
+    warn_exported_vars,
+    warn_untyped_record,
+    warn_missing_spec
 ]}.
 
-{dialyzer, [
-    {warnings, [
-        no_return,
-        no_unused,
-        no_improper_lists,
-        no_fun_app,
-        no_match,
-        no_opaque,
-        no_fail_call,
-        error_handling,
-        race_conditions,
-        unmatched_returns
-    ]},
-    {plt_extra_apps, [crypto, public_key, ssl, inets, gun]}
+{deps, [
+	{gun, {git, "https://github.com/ninenines/gun", {ref, "8efcedd3a089e6ab5317e4310fed424a4ee130f8"}}}
 ]}.
 
 {xref_checks, [
@@ -30,13 +29,6 @@
     deprecated_functions
 ]}.
 
-{cover_enabled, true}.
-{cover_export_enabled, true}.
-
 {shell, [
     {apps, [ssl_cert]}
-]}.
-
-{alias, [
-    {check, [compile, dialyzer, xref]}
 ]}.
