refactor: format code with erlfmt and improve documentation
- Format all Erlang files with erlfmt for consistent style
- Add comprehensive moduledoc and function documentation
- Update rebar.config with linting, formatting, and coverage tools
- Add extensive test suite with 68% total coverage
- Improve error handling and code structure
- Add erlang_ls.config for better IDE support

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [
     debug_info,
     warn_unused_vars,
+    warnings_as_errors,
     warn_export_all,
     warn_shadow_vars,
     warn_unused_import,
@@ -9,15 +10,39 @@
     warn_unused_record,
     warn_deprecated_function,
     warn_obsolete_guard,
-    strict_validation,
     warn_export_vars,
     warn_exported_vars,
-    warn_untyped_record,
-    warn_missing_spec
+    warn_missing_spec,
+    warn_missing_doc
 ]}.
 
+{src_dirs, ["src"]}.
+
+{profiles, [
+    {test, [
+        {erl_opts, [
+            nowarn_missing_spec,
+            nowarn_missing_doc,
+            nowarn_unused_function,
+            nowarn_unused_vars,
+            nowarn_export_all,
+            nowarn_shadow_vars,
+            nowarn_unused_import,
+            nowarn_unused_record,
+            nowarn_deprecated_function,
+            nowarn_obsolete_guard,
+            nowarn_export_vars,
+            nowarn_exported_vars
+        ]},
+        {covertool, [{coverdata_files, ["eunit.coverdata", "ct.coverdata"]}]},
+        {cover_enabled, true},
+        {cover_export_enabled, true}
+    ]}
+]}.
 {deps, [
-	{gun, {git, "https://github.com/ninenines/gun", {ref, "8efcedd3a089e6ab5317e4310fed424a4ee130f8"}}}
+    {gun,
+        {git, "https://github.com/ninenines/gun",
+            {ref, "8efcedd3a089e6ab5317e4310fed424a4ee130f8"}}}
 ]}.
 
 {xref_checks, [
@@ -29,6 +54,57 @@
     deprecated_functions
 ]}.
 
+{project_plugins, [
+    {rebar3_lint, "~> 4.0"},
+    {erlfmt, "~> 1.6"},
+    {covertool, "~> 2.0"}
+]}.
+
+{erlfmt, [
+    write,
+    {files, [
+        "include/**/*.{hrl,erl,app.src}",
+        "src/**/*.{hrl,erl,app.src}",
+        "tests/**/*.{hrl,erl,app.src}",
+        "rebar.config"
+    ]}
+]}.
+
+{elvis, [
+    #{
+        dirs => ["src","tests"],
+        filter => "*.erl",
+        rules => [
+            {elvis_text_style, line_length, #{limit => 100}},
+            {elvis_style, invalid_dynamic_call, #{ignore => []}},
+            {elvis_style, god_modules, #{limit => 25}},
+            {elvis_style, private_data_types, disable},
+            {elvis_style, export_used_types, disable},
+            {elvis_style, atom_naming_convention, #{
+                regex =>
+                    "^([a-z](_?[a-z0-9]+)*(_SUITE)?|publicExponent|privateExponent|subjectPKInfo|certificationRequestInfo|signatureAlgorithm|utf8String|rdnSequence|dNSName|iPAddress|extnID|extnValue|asn1_NOVALUE|asn1_OPENTYPE)$",
+                enclosed_atoms => ".*",
+                forbidden_regex => undefined,
+                forbidden_enclosed_regex => undefined
+            }},
+            {elvis_style, variable_naming_convention, #{
+                regex => "^(_?[A-Z][0-9a-zA-Z]*|SPKI_Der|CN_DER|SAN_Der)$"
+            }}
+        ],
+        ruleset => erl_files
+    },
+    #{
+        dirs => ["."],
+        filter => "rebar.config",
+        ruleset => rebar_config
+    }
+]}.
+
+% {eunit_opts, [verbose, {scale_timeouts, 10}]}.
+
 {shell, [
     {apps, [ssl_cert]}
 ]}.
+% {eunit, [
+% 	{apps, [ssl_cert]}
+% ]}.
