--- a/rebar.config
+++ b/rebar.config
@@ -55,9 +55,22 @@
 ]}.
 
 {project_plugins, [
+    {rebar3_hex, "~> 7.0"},
     {rebar3_lint, "~> 4.0"},
+    {rebar3_ex_doc, "~> 0.2"},
     {erlfmt, "~> 1.6"},
     {covertool, "~> 2.0"}
+]}.
+
+{hex, [{doc, #{provider => ex_doc}}]}.
+
+{ex_doc, [
+    {source_url, <<"https://github.com/permaweb/ssl_cert">>},
+    {main, <<"readme">>},
+    {extras, [
+        {'README.md', #{title => <<"Overview">>}},
+        {'LICENSE', #{title => <<"License">>}}
+    ]}
 ]}.
 
 {erlfmt, [
