--- a/rebar.config
+++ b/rebar.config
@@ -40,9 +40,15 @@
     ]}
 ]}.
 {deps, [
-    {gun,
-        {git, "https://github.com/ninenines/gun",
-            {ref, "8efcedd3a089e6ab5317e4310fed424a4ee130f8"}}}
+    {gun, "~> 2.2.0"}
+]}.
+
+{overrides, [
+    {override, gun, [
+        {deps, [
+            {cowlib, "2.15.0"}
+        ]}
+    ]}
 ]}.
 
 {xref_checks, [
@@ -113,11 +119,6 @@
     }
 ]}.
 
-% {eunit_opts, [verbose, {scale_timeouts, 10}]}.
-
 {shell, [
     {apps, [ssl_cert]}
 ]}.
-% {eunit, [
-% 	{apps, [ssl_cert]}
-% ]}.
